# keyed

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.conda  Dockerfile.minimal  Dockerfile.uv  README.md  environment.extras.yml  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg
.github/: FUNDING.yml
.github/actions/install-system-deps/: action.yml
.github/workflows/: docker.yml  docker_publish.yml  docs.yml  packaging.yml  pypi_publish.yml  ruff.yml  tests.yml  types.yml
docs/: .gitignore  conf.py  conventions.md  first_scene.md  index.rst  install.md
docs/api/: animation.md  annotations.md  code.md  colors.md  compositor.md  core.md  easing.md  effects.md  impl.md  scene.md  shapes.md  text.md  transforms.md  utils.md
docs/changelog/: index.md
docs/contributing/: environment.md
docs/extras/: fairuse.md  goals.md  index.md
docs/hooks/: shortcodes.py  tags.py  video_replace.py
docs/media/: bouncing_ball.webm
docs/overrides/: main.html
docs/plugins/: custom_tags_extension.py
docs/scripts/: docker_command  generate_easing_animations.py  generate_media.sh
docs/stylesheets/: extra.css
docs/tutorial/: animation.md  easing.md  first_scene.md  transformations.md
docs_src/: docker_command  generate_docs.sh
docs_src/blend/: blend_grid.py
docs_src/easing/: easing-grid-template.md  generate_easing_animations.py  make_easing_grid.py
docs_src/gallery/: gallery.yml  gallery_template.md  generate_gallery_animations.py  make_gallery.py  scene_template.md
docs_src/tutorial/easing/: moving_circle.py
examples/: _example.py  align_to.py  align_to_example.py  align_with_transformations.py  bezier_explainer.py  blur_example.py  circle.py  code_replace.py  code_replace_complex.py  color_interp.py  controls.py  copies.py  cursor.py  curve.py  curve_interp.py  curve_interp2.py  discretize.py  distribute.py  draw_selection.py  easing_plot.py  editor.py  editor_code_replace.py  emphasize_line.py  fade_in.py  first_scene.py  follow.py  graph_of_computation.py  grid.py  hand_drawn.py  highlight.py  interp_lines.py  line.py  loop_shift.py  mind_melter.py  move_to.py  movement.py  multiline_text_example.py  new_transforms.py  new_transforms_selection.py  orbits.py  (+36 more)
examples/docs-are-enough/: render_layer.py
examples/more-examples/: reactive_polygon.py
examples/requires-extras/: blur_example.py  displace_effect.py  editor.py  editor_code_replace.py  pattern.py  stipple.py  svg_shapes.py  svg_test.py  underline_example.py
scripts/: blend_mode_debug.py
src/keyed/: __init__.py  _extras_compat.py  animation.py  annotations.py  base.py  builders.py  cli.py  code.py  color.py  compositor.py  compute_graph.py  config.py  constants.py  context.py  curve.py  curve2.py  debug.py  easing.py  editor.py  effects.py  extras.py  geometry.py  grid.py  group.py  helpers.py  highlight.py  line.py  parser.py  plot.py  polygon.py  previewer.py  previewer2.py  renderer.py  scene.py  selection.py  shapes.py  text.py  transformation.py  transforms.py  types.py
src/keyed/compositor/: compositor_cairo.py  compositor_taichi.py  core.py
src/keyed/previewer/: __init__.py  filewatch.py  impl.py  qt_preview.py  quality.py  tk_preview.py
src/keyed/web_previewer/: __init__.py  filewatch.py  server.py
src/keyed/web_previewer/static/: index.html
src/manic/: __init__.py  __main__.py  animation.py  base.py  code.py  color.py  easing.py  highlight.py  manic_pygments.py  previewer.py  scene.py  shapes.py
tests/: conftest.py  helpers.py  test_align.py  test_builders.py  test_char_find.py  test_common.py  test_constants.py  test_curve.py  test_curves.py  test_easing.py  test_examples.py  test_expression.py  test_extras_integration.py  test_followers.py  test_grid_text.py  test_helpers.py  test_loop.py  test_parser.py  test_pingpong.py  test_preview_backends.py  test_property.py  test_scene.py  test_scene_find.py  test_selection.py  test_sine.py  test_snapshots.py  test_transforms.py  test_writeon.py
tests/data/: multiline_string.py
