[metadata]
name = keyed
description = A code rendering engine written in cario.
version = attr: keyed.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Doug Mercer
author_email = dougmerceryt@gmail.com

[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
install_requires =
    pillow
    pycairo
    pydantic
    pygments
    shapely
    tqdm
    # typing-extensions; python_version < '3.8'
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
keyed = py.typed

[options.extras_require]
dev =
    black
    flake8
    hypothesis
    ipykernel
    isort
    mypy
    pydocstyle
    pytest
    pytest-cov
    syrupy
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
all =
    %(dev)s
    %(docs)s

[tool:pytest]
junit_family = xunit2
addopts = --doctest-modules --cov=src --cov-report=html
filterwarnings =
    ignore::DeprecationWarning
testpaths =
	tests
    src/keyed

[flake8]
max-line-length = 100
ignore = E203,E225,W503,E704
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    docs/source/conf.py
    build
    dist

[pydocstyle]
convention = numpy
add_ignore = D105

[mypy]
allow_redefinition = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
exclude = (?x)(
    ^build/.*
    | ^_old/.*
    | ^testing/.*
  )
untyped_calls_exclude =
    PIL
