[metadata]
name = keyed
description = A code rendering engine written in cario.
version = attr: keyed.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Doug Mercer
author_email = dougmerceryt@gmail.com

[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
install_requires =
    pillow
    pycairo
    pydantic
    pygments
    scipy
    shapely
    signified
    taichi
    tqdm
    pyside6
    # typing-extensions; python_version < '3.8'
python_requires = >=3.8

[options.packages.find]
where = src

[options.package_data]
keyed = py.typed

[options.extras_require]
lint =
    black
    flake8
    isort
    mypy
    pydocstyle
test =
    hypothesis
    pytest
    pytest-cov
    syrupy
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
all =
    %(lint)s
    %(test)s
    %(docs)s

[tool:pytest]
junit_family = xunit2
addopts = --doctest-modules --cov=src --cov-report=html
filterwarnings =
    ignore::DeprecationWarning
testpaths =
	tests
    src/keyed
markers =
    snapshot: marks tests as snapshot (deselect with '-m "not snapshot"')

[flake8]
max-line-length = 120
ignore = E203,E225,W503,E704
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    docs/source/conf.py
    build
    dist
    testing
    examples/example.py
    junk

[pydocstyle]
convention = numpy
add_ignore = D105

[mypy]
allow_redefinition = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
exclude = (?x)(
    ^build/.*
    | ^_old/.*
    | ^testing/.*
    | junk/.*
  )
untyped_calls_exclude =
    PIL

[coverage:report]
exclude_also =
    pragma: no cover
    if TYPE_CHECKING:

    pass
